arpspoof/config/server.yml
apiVersion: v1
kind: Pod
metadata:
  generateName: server-
  labels:
    group: rkalyana
    app: arpspoof-server
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - {key: group, operator: In, values: [rkalyana,rkalyana-public]}
          matchExpressions:
          - {key: app, operator: In, values: [arpspoof-victim,arpspoof-hacker]}
  containers:
  - name: server
    image: timwang/ieeetrycybserverapacheflaskappsslnohstsnorewrite:1.0
    ports:
    - containerPort: 80
    - containerPort: 443
