arpspoof/config/victim.yml
apiVersion: v1
kind: Pod
metadata:
  name: victim
  labels:
    group: rkalyana-public
    app: arpspoof
spec:
  containers:
  - name: victim
    image: rkalyana/victim-notebook
    ports:
    - containerPort: 8888
