arpspoof/config/service.yml
kind: Service
apiVersion: v1
metadata:
  name: arpspoof-service
  labels:
    group: rkalyana-public
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
  - name: jupyter
    port: 8888
    protocol: TCP
  selector:
    app: arpspoof
